--- a/CNW/Views/User/Register.cshtml
+++ b/CNW/Views/User/Register.cshtml
@@ -43,8 +43,9 @@
 
                         <div class="form-horizontal">
                             <h2 class="title">Registration Info</h2>
-                            
-                            @Html.ValidationSummary(true, "", new { @class = "input--style-3" })
+                            <div class="input-group">
+                                @Html.ValidationSummary(true, "", new { @class = "input--style-3" })\
+                            </div>
                             <div class="input-group">
       
                                 <div class="col-md-10">
