--- a/CNW/Areas/AdminArea/Views/Shared/SlideBar.cshtml
+++ b/CNW/Areas/AdminArea/Views/Shared/SlideBar.cshtml
@@ -18,14 +18,14 @@
                     </a>
                             <ul class="list-unstyled navbar__sub-list js-sub-list">
                                 <li>
-                                    <a href="/AdminArea/ProductAdmin/Index">All</a>
+                                    <a href="/AdminArea/ProductAdmin/Index">Product</a>
                                 </li>
-                                @foreach (var item in Model)
-                                {
-                                    <li>
-                                        <a href="/AdminArea/ProductAdmin/@item.id">@item.Name </a>
-                                    </li>
-                                }
+                                <li>
+                                    <a href="/AdminArea/PDAdmin/Index">Product Detail</a>
+                                </li>
+                                <li>
+                                    <a href="/AdminArea/ImagesAdmin/Index">Images</a>
+                                </li>
                             </ul>
                     </li>
 
